--- a/assembler_log.yaml
+++ b/assembler_log.yaml
@@ -19,10 +19,10 @@
   C: 2
   bin: 0xe0, 0x10, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00
 - A: 5
-  B: 3
+  B: 4
   C: 0
-  bin: 0xa0, 0x00, 0x00, 0x60, 0x00, 0x00, 0x00, 0x00
+  bin: 0xa0, 0x00, 0x00, 0x80, 0x00, 0x00, 0x00, 0x00
 - A: 5
-  B: 3
+  B: 5
   C: 1
-  bin: 0xa0, 0x00, 0x00, 0x60, 0x40, 0x00, 0x00, 0x00
+  bin: 0xa0, 0x00, 0x00, 0xa0, 0x40, 0x00, 0x00, 0x00
